v1 of solution but there's definately some bugs